fix(#211): code review fixes — add decisionsByType to JSON, fix Javadoc, preserve map order
- Add decisionsByType to ComplianceReport JSON summary output
- Update buildActorMerkleRoot Javadoc for tenancy-level usage
- Use Collections.unmodifiableMap instead of Map.copyOf to preserve insertion order

Refs #211

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>